Added handwriting and images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <header>
                 <h3>Videojuegos</h3>
             </header>
-            <!-- Mini documento -->
              <p>Mis juegos favoritos son aquellos de novelas graficas (tambien conocidos como otomes), cozy games, uno que otro shooter, juegos desarrollados por equipos pequeños (indie RPG games). Algunos ejemplos de ellos son:</p>
              <ul>
                 <li>Fortnite</li>
@@ -34,10 +33,21 @@
              </ul>
              <img width="500px" src="img/Fortnite.jpg" alt="Personaje de Fortnite apuntando a otro personaje mientras este baila.">
              <p>Desde que estaba en secundaria empecé jugando RPG's puesto que los requisitos de aquellos juegos no eran muy demandantes para mi computadora, tiempo después empecé a jugar en linea tanto en PC y hace poco en consola. He sido nintendera desde pequeña con mi gameboy, que pasó a una Nintendo 3DS y actualmente tengo una Switch Oled con la que juego Animal Crossing.</p>
-             <img width="500px"src="img/AC.jpg" alt="Aldeano del juego Animal Crossing New Horizons en un paisaje lleno de flores, cascadas y giroides.">
+             <img width="500px" src="img/AC.jpg" alt="Aldeano del juego Animal Crossing New Horizons en un paisaje lleno de flores, cascadas y giroides.">
              <footer>
-                <p>Si bien no me considero una pro-player me divierte muchisimo pasar tiempo con mis amigos, convivir con gente de otros países y  competir.</p>
+                <p>Si bien no me considero una pro-player me divierte muchisimo pasar tiempo con mis amigos, convivir con gente de otros países y de vez en cuando competir.</p>
              </footer>
+        </article>
+        <hr>
+        <article>
+            <header>
+                <h3>Escritura</h3>
+            </header>
+            <p>Si bien me gustan todas las artes y creo he probado la mayoría, hay 2 que me llenan el alma. Desde secundaria he escrito y me ha encantado poder expresarme a travez de historias, me gusta plasmar mis sentimientos en escritos, ultimamente solo he escrito cuando me lo dicta mis sentimientos. Desde que estaba en escuela, cuando mi computadora no tenía internet, buscaba como entretenerme en aquel aparato, jugaba en el programa de mi primera encarta y cuando descubrí el paquete de office, fue algo completamente nuevo para mi. Ahí aparte de empezar mi amor hacia la escritura, comenzó una curiosidad hacia la ofimática, desde ahí me veía un poco en el área de TI. Empecé escribiendo historias sobre personajes, por lo general de romance. Después, los empecé a pulicar en una aplicación, tuvo un poco de fama en la comunidad en la que estaba y le dí fin. Después hice historias en mi libreta, poesía, todas ellas inconclusas.</p>
+            <img width="500px" src="img/Escritura.jpg" alt="Persona Escribiendo En Un Cuaderno Al Lado De Macbook">
+            <footer>
+            <p>Al momento de entregar mis trabajos de español daba todo de mí. Recuerdo que una vez me pidieron un cuento y yo le habia entregado "un libro" a mi maestra, según mis compañeros. Amo la escritura ya que si hay algo que me gusta experimentar como lectora es la emoción de ver como la trama dió un giro completamente inesperado, llorar por como terminó una historia, quedarte pasmada por las desciciones o secretos que soltaron los personajes de ultimo momento. Quería que cualquiera que leyera mis escritos se sintiera así, que leyera con emoción en mis escritos. Que percibiera el amor que querá transmitir por medio de mis palabras, el odio, duda o rescentimiento que sintiera en ese entonces.</p>
+            </footer>
         </article>
     </main>
     
