--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <main>
         <p>Soy una estudiante de 20 años, originaria de Nuevo León, México, me llamo Lisset García, mejor conocida como Sunny ☀️</p>
-        <p>Soy egresada de la Escuela Industrial y Preparatoria Técnica Álvaro Obregón, siendo técnica en programación web. Conozco jenguajes como HTML, CSS (aunque no sean considerados lenguajes), Java, Java script, C#, C++, SQL, Python entre otros.</p>
+        <p>Soy egresada de la Escuela Industrial y Preparatoria Técnica Álvaro Obregón, siendo técnica en programación web. Conozco lenguajes como HTML, CSS (aunque no sean considerados lenguajes), Java, Java script, C#, C++, SQL, Python entre otros.</p>
         <p>Actualmente estoy estudiando la carrera de Tecnologías de información en la Facultad de Contaduría Pública y Administración, cursando el 5to semestre.</p>
         <h2>Mis gustos y pasatiempos...</h2>
         <hr>
@@ -47,6 +47,21 @@
             <img width="500px" src="img/Escritura.jpg" alt="Persona Escribiendo En Un Cuaderno Al Lado De Macbook">
             <footer>
             <p>Al momento de entregar mis trabajos de español daba todo de mí. Recuerdo que una vez me pidieron un cuento y yo le habia entregado "un libro" a mi maestra, según mis compañeros. Amo la escritura ya que si hay algo que me gusta experimentar como lectora es la emoción de ver como la trama dió un giro completamente inesperado, llorar por como terminó una historia, quedarte pasmada por las desciciones o secretos que soltaron los personajes de ultimo momento. Quería que cualquiera que leyera mis escritos se sintiera así, que leyera con emoción en mis escritos. Que percibiera el amor que querá transmitir por medio de mis palabras, el odio, duda o rescentimiento que sintiera en ese entonces.</p>
+            </footer>
+        </article>
+        <hr>
+        <article>
+            <header>
+                <h3>Música</h3>
+            </header>
+            <p>Este es el segundo arte que me llena el alma. La música siempre ha formado parte de mi vida, yo no toco instrumentos, pero se cantar. Desde pequeña escuchaba canciones en el estéreo y radio, crecí escuchando Caifanes, Luis Miguel, Leo Dan, José José, Camilo Sesto, Vallenatos y grupos de Rock en español e ingles. cuando estaba en escuela escuchaba covers de canciones japonesas, escuchaba canciones al inglés y de programas que cantaban al japonés (Vocaloid) y ahí odiaba el reggaeton, fuí parte del coro en la escuela y secundaria, cantar ha sido una pasión para mi desde pequeña. Y de las artes que he practicado esta es la que mas me gusta.</p>
+            <p>A día de hoy tengo playlist mensuales, viendo que me gustaba en ese entonces es como viajar en el tiempo. Tengo playlists compartidas con amigos, para comprarar gustos mas que nada, me gusta mucho enriquecerme con los gustos de las demás personas, considero que no hay un genero que odie, por lo general me encanta de todo un poco aunque la mayoría de mis gustos sea pop (ya sea pop, kpop o jpop).</p>
+            <!-- <img width="500px" src="img/Playlist.jpg" alt=""> Agg img -->
+            <p>Si bien mis artistas así como mis canciones favoritas siempre cambian, estos son los artistas y canciones que mas reproduzco por el momento:</p>
+            <!-- <img width="500px" src="img/Favs.jpg" alt=""> Agg img-->
+            <footer>
+            <p>Agradezco a la música por hacerme sentir mejor en muchos momentos y más que nada a BTS por todas esas veces que hizo que saliera de la depresión y me acompañaron cada que necesitaba llorar. Sí a alguien le debo de agradecer el que haya levantadome día con día es a ellos.</p>
+            <!-- <img width="500px" src="img/BTS.jpg" alt=""> Agg img-->
             </footer>
         </article>
     </main>
